Biggest changes: text alignment fixed, header implemented, fade in for homepage content

--- a/style.css
+++ b/style.css
@@ -36,19 +36,90 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
-  /* overflow: hidden */
 }
-header {
-  padding: 30px;
-  /* text-align: right; */
-  background: transparent;
-  border-bottom: 1px dotted;
-  color: white;
-  font-size: 30px;
+intro {
+  animation: fadein 3s;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+  justify-content: center;
+  font-size: x-large;
+  display: flex;
+  .emoji {
+    height: 5px;
+    border-radius: 100px;
+    animation: glow 1s infinite alternate;
+  }
 }
 
-header p {
-  margin: 0 20px;
+@keyframes glow {
+  from {
+    box-shadow: 0 0 1px -5px #aef4af;
+  }
+  to {
+    box-shadow: 0 0 1px 5px #aef4af;
+  }
+}
+
+@keyframes fadein {
+from {
+    opacity:0;
+}
+to {
+    opacity:1;
+}
+}
+header {
+  padding: 15px;
+  text-align: right;
+  background: transparent;
+  border-bottom: 1px solid;
+  color: white;
+  font-size: large;
+  align-items: right;
+  justify-content: right;
+  display: flex;
+  a {
+    text-decoration: none;
+    color: lightgray;
+    display: inline-block;
+  }
+  p {
+    margin: 0 20px;
+  }
+  a:hover {
+    color: #fff;
+    transition: color 0.3s ease;
+  }
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #464646;
+  width: inherit;
+  text-align: center;
+  font-size: medium;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 5px;
+  z-index: 1;
+  overflow: visible;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  transition: color 0.3s ease;
+}
+
+.dropdown-content a:hover {
+  background-color: #3e3e3e
 }
 
 footer {
@@ -60,23 +131,15 @@ footer {
     text-decoration: none;
   }
 }
-name {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-  text-align: center;
-  align-items: center;
-  align-content: center;
-  height: 100vh;
-  justify-content: center;
-  font-size: x-large;
-  display: flex;
-}
 #particles-js {
   width: 100%;
   height: 100%;
 }
 info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   a {
     text-decoration: underline dotted white;
     color: lightgray;
@@ -94,9 +157,33 @@ info {
     margin-top: 5vh;
   }
   content {
-    display: flex;
-    flex-direction: column;
-    width: 100vh;
-    padding: 20px;
+    display: inline-block;
+    max-width: 65vw;
+    line-height: 1.6;
+    justify-content: center;
   }
+}
+tooltip {
+  text-decoration: underline dotted white;
+    color: lightgray;
+}
+tooltip::before {
+  content: attr(hover-text);
+  position: absolute;
+  background-color: #8249c4;
+  width: fit-content;
+  color: #fbf9fd;
+  padding: 0.4rem 1rem;
+  top: -70%;
+  left: 0;
+  right: 0;
+  font-size: 1rem;
+  opacity: 0;
+  transform: translateY(20%);
+  transition: all .3s ease-in-out;
+}
+
+tooltip:hover::before {
+  opacity: 1;
+  transform: translateX(-50%) translateY(0%); /* Slide up to original position */
 }
